--- a/main-script.Rmd
+++ b/main-script.Rmd
@@ -380,22 +380,78 @@ list2env(gbif_classes, .GlobalEnv)
 ```
 ```{r final sp names checking}
 c <- makeCluster(detectCores()-1)
-spnames<-parLapply(c, as.character(idigbio$species), gnr_resolve,
+
+# Amphibia
+amp.spnames<-parLapply(c, as.character(amp$species), gnr_resolve,
                          data_source_ids=c(173,3,4,11,174,175),
                          resolve_once=FALSE,
                          with_context=FALSE,canonical=FALSE,highestscore=TRUE,
                          best_match_only=TRUE,http="post",splitby=50,cap_first=TRUE,
                          fields = "minimal")
  
-  sp.val <- vector(length = length(idb_spnames))
-  for (i in 1:length(idb_spnames)){
-    if (length(idb_spnames[i][[1]]>0)){
-      sp.val[i] <- idb_spnames[[i]]$matched_name
+  amp.spnames.val <- vector(length = length(amp.spnames))
+  for (i in 1:length(amp.spnames)){
+    if (length(amp.spnames[i][[1]]>0)){
+      amp.spnames.val[i] <- amp.spnames[[i]]$matched_name
     }
   }
+  amp <- amp[amp$species %in% amp.spnames.val,]
+  rm(amp.spnames, amp.spnames.val)
 
-teste <- amp$species<-gsub(" ","_",amp$species)
-dados2<-dados2[dados2$Species %in% species2,]
+# Aves
+aves.spnames<-parLapply(c, as.character(aves$species), gnr_resolve,
+                         data_source_ids=c(173,3,4,11,174,175),
+                         resolve_once=FALSE,
+                         with_context=FALSE,canonical=FALSE,highestscore=TRUE,
+                         best_match_only=TRUE,http="post",splitby=50,cap_first=TRUE,
+                         fields = "minimal")
+ 
+  aves.spnames.val <- vector(length = length(aves.spnames))
+  for (i in 1:length(aves.spnames)){
+    if (length(aves.spnames[i][[1]]>0)){
+      aves.spnames.val[i] <- aves.spnames[[i]]$matched_name
+    }
+  }
+  aves <- aves[aves$species %in% aves.spnames.val,]
+  rm(aves.spnames, aves.spnames.val)
+  
+  
+# Mammalia
+mam.spnames<-parLapply(c, as.character(mam$species), gnr_resolve,
+                         data_source_ids=c(173,3,4,11,174,175),
+                         resolve_once=FALSE,
+                         with_context=FALSE,canonical=FALSE,highestscore=TRUE,
+                         best_match_only=TRUE,http="post",splitby=50,cap_first=TRUE,
+                         fields = "minimal")
+ 
+  mam.spnames.val <- vector(length = length(mam.spnames))
+  for (i in 1:length(mam.spnames)){
+    if (length(mam.spnames[i][[1]]>0)){
+      mam.spnames.val[i] <- mam.spnames[[i]]$matched_name
+    }
+  }
+  mam <- mam[mam$species %in% mam.spnames.val,]
+  rm(mam.spnames, mam.spnames.val)
+  
+# Reptilia
+rep.spnames<-parLapply(c, as.character(rep$species), gnr_resolve,
+                         data_source_ids=c(173,3,4,11,174,175),
+                         resolve_once=FALSE,
+                         with_context=FALSE,canonical=FALSE,highestscore=TRUE,
+                         best_match_only=TRUE,http="post",splitby=50,cap_first=TRUE,
+                         fields = "minimal")
+ 
+  rep.spnames.val <- vector(length = length(rep.spnames))
+  for (i in 1:length(rep.spnames)){
+    if (length(rep.spnames[i][[1]]>0)){
+      rep.spnames.val[i] <- rep.spnames[[i]]$matched_name
+    }
+  }
+  rep <- rep[rep$species %in% rep.spnames.val,]
+  rm(rep.spnames,rep.spnames.val)
+  
+save(amp, aves, mam, rep, file="data/clean/species.Rdata")
+
 ```
 
 ```{r rasters}
