--- a/manuscript/sources/installed-r-packages.bib
+++ b/manuscript/sources/installed-r-packages.bib
@@ -95,6 +95,14 @@
   url = {https://github.com/tidyverse/googlesheets4},
 }
 
+@Manual{biogeo,
+  title = {biogeo: Point Data Quality Assessment and Coordinate Conversion},
+  author = {Mark Robertson},
+  year = {2016},
+  note = {R package version 1.0},
+  url = {https://CRAN.R-project.org/package=biogeo},
+}
+
 @Article{CoordinateCleaner,
   title = {CoordinateCleaner: standardized cleaning of occurrence records from biological collection databases},
   author = {Alexander Zizka and Daniele Silvestro and Tobias Andermann and Josue Azevedo and Camila {Duarte Ritter} and Daniel Edler and Harith Farooq and Andrei Herdean and Maria Ariza and Ruud Scharn and Sten Svanteson and Niklas Wengstrom and Vera Zizka and Alexandre Antonelli},
@@ -113,6 +121,14 @@
   year = {2019},
   note = {R package version 4.2},
   url = {https://CRAN.R-project.org/package=curl},
+}
+
+@Manual{dismo,
+  title = {dismo: Species Distribution Modeling},
+  author = {Robert J. Hijmans and Steven Phillips and John Leathwick and Jane Elith},
+  year = {2017},
+  note = {R package version 1.1-4},
+  url = {https://CRAN.R-project.org/package=dismo},
 }
 
 @Manual{dplyr,
@@ -163,6 +179,22 @@
   url = {https://CRAN.R-project.org/package=here},
 }
 
+@Manual{mapdata,
+  title = {mapdata: Extra Map Databases},
+  author = {Original S code by Richard A. Becker and Allan R. Wilks. R version by Ray Brownrigg.},
+  year = {2018},
+  note = {R package version 2.3.0},
+  url = {https://CRAN.R-project.org/package=mapdata},
+}
+
+@Manual{maps,
+  title = {maps: Draw Geographical Maps},
+  author = {Original S code by Richard A. Becker and Allan R. Wilks. R version by Ray Brownrigg. Enhancements by Thomas P Minka and Alex Deckmyn.},
+  year = {2018},
+  note = {R package version 3.3.0},
+  url = {https://CRAN.R-project.org/package=maps},
+}
+
 @Manual{rgbif1,
   title = {rgbif: Interface to the Global Biodiversity Information Facility API},
   author = {Scott Chamberlain and Vijay Barve and Dan Mcglinn and Damiano Oldoni and Peter Desmet and Laurens Geffert and Karthik Ram},
@@ -178,6 +210,14 @@
   year = {2017},
   publisher = {PeerJ, Inc.},
   url = {https://doi.org/10.7287/peerj.preprints.3304v1},
+}
+
+@Manual{rgeos,
+  title = {rgeos: Interface to Geometry Engine - Open Source ('GEOS')},
+  author = {Roger Bivand and Colin Rundel},
+  year = {2019},
+  note = {R package version 0.5-2},
+  url = {https://CRAN.R-project.org/package=rgeos},
 }
 
 @Manual{tidyr,
@@ -205,6 +245,50 @@
   url = {https://CRAN.R-project.org/package=purrr},
 }
 
+@Manual{raster,
+  title = {raster: Geographic Data Analysis and Modeling},
+  author = {Robert J. Hijmans},
+  year = {2019},
+  note = {R package version 3.0-7},
+  url = {https://CRAN.R-project.org/package=raster},
+}
+
+@Manual{rgdal,
+  title = {rgdal: Bindings for the 'Geospatial' Data Abstraction Library},
+  author = {Roger Bivand and Tim Keitt and Barry Rowlingson},
+  year = {2019},
+  note = {R package version 1.4-7},
+  url = {https://CRAN.R-project.org/package=rgdal},
+}
+
+@Article{sp1,
+  author = {Edzer J. Pebesma and Roger S. Bivand},
+  title = {Classes and methods for spatial data in {R}},
+  journal = {R News},
+  year = {2005},
+  volume = {5},
+  number = {2},
+  pages = {9--13},
+  month = {November},
+  url = {https://CRAN.R-project.org/doc/Rnews/},
+}
+
+@Book{sp2,
+  author = {Roger S. Bivand and Edzer Pebesma and Virgilio Gomez-Rubio},
+  title = {Applied spatial data analysis with {R}, Second edition},
+  year = {2013},
+  publisher = {Springer, NY},
+  url = {http://www.asdar-book.org/},
+}
+
+@Manual{sqldf,
+  title = {sqldf: Manipulate R Data Frames Using SQL},
+  author = {G. Grothendieck},
+  year = {2017},
+  note = {R package version 0.4-11},
+  url = {https://CRAN.R-project.org/package=sqldf},
+}
+
 @Article{taxize1,
   title = {taxize - taxonomic search and retrieval in R},
   journal = {F1000Research},
@@ -219,6 +303,26 @@
   year = {2019},
   note = {R package version 0.9.9},
   url = {https://github.com/ropensci/taxize},
+}
+
+@Manual{tm1,
+  title = {tm: Text Mining Package},
+  author = {Ingo Feinerer and Kurt Hornik},
+  year = {2018},
+  note = {R package version 0.7-6},
+  url = {https://CRAN.R-project.org/package=tm},
+}
+
+@Article{tm2,
+  title = {Text Mining Infrastructure in R},
+  author = {Ingo Feinerer and Kurt Hornik and David Meyer},
+  year = {2008},
+  journal = {Journal of Statistical Software},
+  volume = {25},
+  number = {5},
+  pages = {1--54},
+  url = {http://www.jstatsoft.org/v25/i05/},
+  month = {March},
 }
 
 @Manual{tidylog,
