--- a/manuscript/sources/installed-r-packages.bib
+++ b/manuscript/sources/installed-r-packages.bib
@@ -195,6 +195,14 @@
   url = {https://CRAN.R-project.org/package=maps},
 }
 
+@Manual{maptools,
+  title = {maptools: Tools for Handling Spatial Objects},
+  author = {Roger Bivand and Nicholas Lewin-Koh},
+  year = {2019},
+  note = {R package version 0.9-8},
+  url = {https://CRAN.R-project.org/package=maptools},
+}
+
 @Manual{rgbif1,
   title = {rgbif: Interface to the Global Biodiversity Information Facility API},
   author = {Scott Chamberlain and Vijay Barve and Dan Mcglinn and Damiano Oldoni and Peter Desmet and Laurens Geffert and Karthik Ram},
